# aids

./: .gitignore  Database_handler.py  README.md  analizer.py  database_handler.py  docker-compose.yml  envoy.yaml  main.py  pyproject.toml  test_data.csv
aids-frontend/: .dockerignore  Dockerfile  GEMINI.md  package.json
aids-frontend/src/: app.css
aids-frontend/src/lib/: api.ts  stores.ts
aids-frontend/src/lib/components/: DataViewer.svelte  GraphViewer.svelte
aids-frontend/src/lib/protos/: aids.client.ts  aids.proto  aids.ts  generate-protos.sh
aids-frontend/src/lib/protos/google/protobuf/: empty.ts
aids-frontend/src/routes/: +layout.svelte  +page.svelte
backend/: .dockerignore  Dockerfile  aids.proto  aids_pb2.py  aids_pb2.pyi  aids_pb2_grpc.py  api.py  database_handler.py  generate-protos.sh  main.py  pyproject.toml  start-server
